--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 
 .bank {
   display: flex;
-  height: 200px;
+  border-color: white;
+  border: 1px;
   justify-content: center;
-  align-items: center;
 }
 
 button {
