--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 
   background-color: rgb(33, 189, 19);
   opacity: 1;
-  background-image: radial-gradient(circle at center center, #ffffff, #247c14),
+  background-image: radial-gradient(circle at center center, #2cff4f, #206e12),
     repeating-radial-gradient(
       circle at center center,
       #ffffff,
